# glider-dashboard

./: .dockerignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: __init__.py
app/assets/: style.css
app/pages/: flight_log.py  home.py
app/utils/: stats.py
